docs(readme): 根 README 三模块对表 + reader 模块 README 新建
- 根 README：两模块→三模块（vb-stream-reader 落地后未同步）、新增 reader 运行节
  （零 -D 起步/三层合并/-Dvb.config）、测试计数 437→450（引擎 180 + 连接器 263
  + reader 7，全量 mvn test 实测）、引擎 it 11→12 组、基线注记补 connector 化
  端到端对照段
- vb-stream-reader/README.md：定位与架构/三层合并配置面/运行/输出与 offset 语义
  /已知限制/测试形态六节，内容对齐模块 CLAUDE.md 与源码（渲染格式、注入默认四项、
  FileOffsetBackingStore 父目录坑、slf4j 2.0.17 坑）
- CLAUDE.md：两处漂移计数同步（引擎 177→180、连接器 260→263，it 25 核实不变）

Co-Authored-By: Claude <noreply@anthropic.com>